# flying-trading

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
clickhouse/: .user.yml  profiles.yml  pyproject.toml
dags/: hello_world.py
flt_starrocks/: dbt_project.yml
flt_starrocks/models/ohlcv/: ohlcv_5m.sql  schema.yml
migrations/clickhouse/: 001_init.sql
migrations/starrocks/: 001.sql
notebooks/: test_pybit.ipynb
scripts/: apply_migrations.py  backtest_mean_reversion.py  backtest_trend_strategy.py  live_bot.py  place_order.py  upload_data.py  upload_starrocks.py
src/flying_trading/: cli.py  config.py  data-collection.py  data_collection.py  live_bot.py  logger.py  starrocks_loader.py  train.py
src/flying_trading/adapters/: bybit_adapter.py  indicator_service.py  telegram_adapter.py
src/flying_trading/application/: risk_manager.py  strategy.py
src/flying_trading/domain/: interfaces.py  models.py
tests/: test_bybit_adapter.py
