[project]
name = "flying-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitrij-Salenkoff", email = "dmitrij.salenkoff@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "clickhouse-driver[numpy]>=0.2.10",
    "matplotlib>=3.10.7",
    "numpy>=2.2",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pyarrow>=22.0.0",
    "pybit>=5.13.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[project.scripts]
flt = "flying_trading.cli:cli"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.1",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["flying_trading"]
